# Simple-RAG-Application

./: .gitignore  README.md  app.py  data_ingestion_pipeline.py  data_retrieval_pipeline.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_storage/: chroma.sqlite3
notebooks/: document.ipynb  pdf_loader.ipynb
src/: document_loader.py  embedding.py  vector_store_chromadb.py  vector_store_faiss.py
static/: index.html
