[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-groq>=1.0.0",
    "pymupdf>=1.26.5",
    "sentence-transformers>=5.1.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
